name:                moonrock
version:             0.1.0.1
synopsis:            A toy.
description:         Ruby to Haskell compiler. One day.
license:             MIT
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
copyright:           Alfredo Di Napoli
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    Language.MoonRock.AST
    Language.MoonRock.Parser
    Language.MoonRock.Pretty
    Language.MoonRock.TypeChecker
    Language.MoonRock.Translator
    Language.MoonRock.Evaluator
  -- other-modules:       
  -- other-extensions:    
  build-depends:       
      base >=4.6 && < 5
    , parsec > 3.0.0.0
    , text >= 1.0.0.0
    , haskell-src-exts >= 1.15.0.1
    , ansi-terminal >= 0.6.1.1
    , annotated-wl-pprint >= 0.5.3
  hs-source-dirs:
    src
  default-language:    Haskell2010

executable mrc
  main-is:
    Moonrock.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       
      base >=4.6 && < 5
    , parsec
    , moonrock -any
  hs-source-dirs:
    compiler
  default-language:    Haskell2010

executable mrci
  main-is:
    Interpreter.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       
      base >=4.6 && < 5
    , parsec
    , moonrock -any
  hs-source-dirs:
    interpreter
  default-language:    Haskell2010